--- a/contacts.html
+++ b/contacts.html
@@ -4,20 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
-    <title>CONTACTS | WEB LAB 1</title>
+    <title>HOME | WEB LAB 1</title>
   </head>
   <body class="body bordered">
-    <header class="header bordered">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur
-        provident quis ipsum porro modi illum molestiae, nobis laudantium et vel
-        quas reprehenderit perferendis nisi asperiores illo fugit aperiam
-        quibusdam veritatis.
-      </p>
-      <h1 class="padded-border">Hello World</h1>
-    </header>
-    <main class="main bordered">
-      <nav class="nav bordered full-centered">
+    <div class="section-1 bordered full-centered">
+      <div class="content">
         <ul>
           <li>
             <a href="./index.html">Main Page </a>
@@ -35,44 +26,53 @@
             <a href="./products.html">Products</a>
           </li>
         </ul>
-      </nav>
-      <div class="content bordered">
-        <div class="internal bordered">
-          <div class="center bordered">
-            <div class="top bordered full-centered photo">
+      </div>
+    </div>
+    <div class="right-column">
+      <div class="section-2 bordered">
+        <div class="header-content">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et qui
+            itaque, nam, corrupti totam eum ea dolor blanditiis.
+          </p>
+        </div>
+        <div class="button bordered"><h1>Hello World</h1></div>
+      </div>
+      <div class="middle-row">
+        <div class="middle-left">
+          <div class="section-3 bordered full-centered">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et qui
+              itaque, nam, corrupti totam eum ea dolor blanditiis.
+            </p>
+          </div>
+          <div class="section-5 bordered full-centered">
+            <div class="main-content">
               <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTc9APxkj0xClmrU3PpMZglHQkx446nQPG6lA&s"
                 alt="Some photo"
               />
             </div>
-            <div class="bottom bordered full-centered">
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Pariatur provident quis ipsum porro modi illum molestiae, nobis
-                laudantium et vel quas reprehenderit perferendis nisi asperiores
-                illo fugit aperiam quibusdam veritatis.
-              </p>
-            </div>
           </div>
-          <aside class="aside bordered full-centered">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur
-              provident quis ipsum porro modi illum molestiae, nobis laudantium
-              et vel quas reprehenderit perferendis nisi asperiores illo fugit
-              aperiam quibusdam veritatis.
-            </p>
-          </aside>
         </div>
-        <footer class="footer bordered">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur
-            provident quis ipsum porro modi illum molestiae, nobis laudantium et
-            vel quas reprehenderit perferendis nisi asperiores illo fugit
-            aperiam quibusdam veritatis.
-          </p>
-          <h6 class="bordered padded-border">Bye World</h6>
-        </footer>
+        <div class="section-4 bordered full-centered">
+          <div class="sidebar-content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et qui
+              itaque, nam, corrupti totam eum ea dolor blanditiis.
+            </p>
+          </div>
+        </div>
       </div>
-    </main>
+    </div>
+    <div class="section-6 bordered">
+      <div class="button bordered"><h6>By World</h6></div>
+      <div class="footer-content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et qui
+          itaque, nam, corrupti totam eum ea dolor blanditiis.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
