rm main content centered x

--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
               itaque, nam, corrupti totam eum ea dolor blanditiis.
             </p>
           </div>
-          <div class="section-5 bordered full-centered">
+          <div class="section-5 bordered">
             <div class="main-content">
               <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTc9APxkj0xClmrU3PpMZglHQkx446nQPG6lA&s"
