--- a/reviews.html
+++ b/reviews.html
@@ -46,7 +46,7 @@
               itaque, nam, corrupti totam eum ea dolor blanditiis.
             </p>
           </div>
-          <div class="section-5 bordered full-centered">
+          <div class="section-5 bordered">
             <div class="main-content">
               <p>
                 <b>
